[fix] CSS tweak for homepage Masthead to ensure all test stays visible. [update] Tweak Sarah F. bio.

--- a/assets/css/_tweaks.scss
+++ b/assets/css/_tweaks.scss
@@ -16,3 +16,8 @@ Mostly styles to tweak the template to play friendly with the bootstrap grid.
 .ss-copyright{
   font-family: monospace;
 }
+
+// fix for weird subtitle display on homepage masthead.
+.s-intro{
+  height: unset!important;
+}
